Fix Banner CSS layout to prevent Footer overlap

--- a/netflix-clone/src/Components/Banner/banner.css
+++ b/netflix-clone/src/Components/Banner/banner.css
@@ -2,8 +2,8 @@
   position: relative;
   color: white;
   height: 80vh;
-  margin-top: -10vh;
-  margin-bottom: -88px;
+  margin-top: 0;
+  margin-bottom: 0;
   object-fit: contain;
 }
 .banner_contents {
